# turbomcpstudio

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MCP_STUDIO_ANALYSIS.md  MCP_STUDIO_TECHNICAL_DESIGN.md  Makefile  README.md  SAMPLING_COMPREHENSIVE_ANALYSIS.md  SAMPLING_DEVELOPER_FOCUSED.md  SAMPLING_MVP_ROADMAP.md  SAMPLING_PURE_DX.md  package.json  pnpm-lock.yaml  run_sampling_tests.sh  tailwind.config.js  test_config.json  test_mcp_server.py  test_sampling_config.json  test_sampling_elicitation_server.py
.github/workflows/: ci.yml  release.yml
scripts/: build.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  error.rs  hitl_sampling.rs  interceptor.rs  lib.rs  llm_config.rs  main.rs  mcp_client.rs  mcp_client.rs.old-monolithic-2  types.rs  workflow_engine.rs
src-tauri/src/commands/: client_install.rs  collections.rs  database.rs  elicitation.rs  llm_playground.rs  mcp_prompts.rs  mcp_resources.rs  mcp_tools.rs  mod.rs  oauth.rs  profiles.rs  protocol_inspector.rs  proxy.rs  registry.rs  sampling.rs  server_config.rs  server_lifecycle.rs  step_editor.rs  test_generation.rs  utility.rs  workflows.rs
src-tauri/src/llm_providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  openai_compatible.rs  stop_reason_mapping.rs
src-tauri/src/llm_providers/shared/: errors.rs  http_client.rs  mod.rs  types.rs
src-tauri/src/mcp_client/: configuration.rs  connection.rs  elicitation.rs  events.rs  health_monitoring.rs  initialization.rs  manager.rs  mcp_operations.rs  message_history.rs  misc_operations.rs  mod.rs  monitoring_loop.rs  notification_handlers.rs  process.rs  rate_limiter.rs  sampling.rs  sampling_logic.rs  transport_client.rs  transport_layer.rs
src-tauri/src/oauth/: callback_server.rs  dpop_manager.rs  flow_manager.rs  metadata_discovery.rs  mod.rs  provider_templates.rs  token_store.rs
src-tauri/src/proxy/: benchmark.rs  manager.rs  mod.rs  types.rs
src-tauri/src/registry/: config_generator.rs  fetch.rs  mod.rs  platform.rs  types.rs
src-tauri/src/testing/: analyzer.rs  db.rs  executor.rs  generator.rs  mod.rs
src-tauri/src/types/: collections.rs  config_types.rs  llm_config.rs  mod.rs  profile_types.rs  server_types.rs  test_types.rs
src-tauri/tests/: database_tests.rs  interceptor_integration_test.rs  monitoring_tests.rs  security_tests.rs  workflow_tests.rs
src/lib/: constants.ts
src/lib/components/: AddServerModal.svelte  AppLoadingScreen.svelte  ChatPlayground.svelte  Collections.svelte  CollectionsManager.svelte  ConfirmDialog.svelte  Dashboard.svelte  DashboardEnhanced.svelte  DeveloperConsole.svelte  EditServerModal.svelte  ElicitationDialog.svelte  ElicitationFlow.svelte  ElicitationView.svelte  ExecutionMonitor.svelte  InstallClientModal.svelte  MinimalProfileStatus.svelte  MissionControl.svelte  MissionControlDashboard.svelte  ModeIndicator.svelte  NotificationPanel.svelte  ProfileEditor.svelte  PromptDesigner.svelte  ProtocolInspector.svelte  ProxyManager.svelte  RegistryBrowser.svelte  ResourceBrowser.svelte  SamplingApprovalModal.svelte  SamplingDebugger.svelte  SamplingTester.svelte  SamplingView.svelte  SamplingWorkbench-ErrorDiagnosis-Integration.md  SamplingWorkbench.svelte  SchemaFormGenerator.svelte  ServerConfigModal.svelte  ServerContextBar.svelte  ServerManagement.svelte  ServerOverview.svelte  ServerSearchFilter.svelte  Settings.svelte  Sidebar.svelte  (+8 more)
src/lib/components/collections/: AssertionEditor.svelte  ElicitationStepConfig.svelte  PromptStepConfig.svelte  ResourceStepConfig.svelte  SamplingStepConfig.svelte  ToolStepConfig.svelte  VariableExtractor.svelte
src/lib/components/gestalts/: AICopilot.svelte  CoverageMatrix.svelte  InsightsPanel.svelte
src/lib/components/layout/: Header.svelte  MainContent.svelte  MasterLayout.svelte  ProfileContextBar.svelte  Sidebar.svelte  index.ts
src/lib/components/oauth/: DPoPInspector.svelte  FlowVisualizer.svelte  OAuthDebugger.svelte  ProviderConfigWizard.svelte  TokenInspector.svelte
src/lib/components/proxy/: BenchmarkPanel.svelte  ProxyCreator.svelte  ProxyList.svelte  ProxyMonitor.svelte
src/lib/components/sampling/: QuickResponseTemplates.svelte
src/lib/components/ui/: Button.svelte  DynamicForm.svelte  EmptyCapabilityState.svelte  ErrorDiagnosis.svelte  FormField.svelte  JsonDiffViewer.svelte  JsonViewer.svelte  KeyValuePairInput.svelte  LoadingSpinner.svelte  ProtocolFlowViz.svelte  ResourceLink.svelte  SamplingRequestCard.svelte  SchemaValidator.svelte  StatusBadge.svelte  StructuredContentViewer.svelte  ToastNotifications.svelte  ToolContextBadge.svelte
src/lib/constants/: index.ts  timeouts.ts
src/lib/stores/: appStore.ts  benchmarkStore.ts  contextStore.ts  elicitationStore.ts  logStore.ts  notificationStore.ts  oauthConfigStore.ts  oauthFlowStore.ts  profileStore.ts  proxyStore.ts  samplingStore.ts  searchStore.ts  serverStore.ts  themeStore.ts  tokenStore.ts  uiStore.ts  workspaceStore.ts
src/lib/styles/: components.css  design-tokens.css
src/lib/types/: collections.ts  llm.ts  mcp-parser.ts  mcp.ts  sampling.ts  system.ts
src/lib/utils/: asyncHelpers.ts  costEstimation.ts  elicitationSchemaValidator.ts  errorDiagnosis.ts  filePicker.ts  logger.ts  modalHelpers.ts  samplingUtils.ts  schemaValidation.ts  serverCapabilities.ts  serverStore.ts  transportCapabilities.ts
src/routes/: +layout.svelte  +page.svelte
