[package]
name = "turbomcpstudio"
version = "0.1.0"
description = "TurboMCP Studio - Native desktop application for Model Context Protocol development"
authors = ["TurboMCP Studio Team"]
edition = "2021"

[lib]
name = "turbomcpstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-sql = { version = "2.0", default-features = false, features = ["sqlite"] }
tauri-plugin-fs = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-clipboard-manager = "2.3"

# Plugin system
tauri-plugin-single-instance = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-os = "2.0"

# HTTP client for LLM API requests (aligned with turbomcp 3.0.0-beta.1)
reqwest = { version = "0.13", features = ["json"] }

# LLM Provider SDKs
async-openai = "0.30"  # Official OpenAI SDK for Rust

# TurboMCP integration - v3.0.0-beta.1 (local development - dogfooding)
# Only include crates that are directly imported - others are pulled transitively
turbomcp-client = { path = "../../turbomcp/crates/turbomcp-client" }  # Client, handlers, sampling
turbomcp-protocol = { path = "../../turbomcp/crates/turbomcp-protocol" }  # Types, McpError

# OAuth 2.1 support - v3 auth crate
turbomcp-auth = { path = "../../turbomcp/crates/turbomcp-auth", features = ["oauth2", "jwt", "token-refresh"] }
turbomcp-dpop = { path = "../../turbomcp/crates/turbomcp-dpop", optional = true }

# Proxy support - v3 proxy crate for MCP server proxying
turbomcp-proxy = { path = "../../turbomcp/crates/turbomcp-proxy", default-features = false, features = ["introspection", "runtime"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"  # For Docker MCP registry YAML parsing

# Data structures
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
url = "2.5"  # URL parsing for HTTP transport
sha2 = "0.10"  # For schema hashing in test generation

# JWT handling
jsonwebtoken = "9.3"
base64 = "0.22"

# Local OAuth redirect server (aligned with turbomcp 3.0.0-beta.1)
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Secure random for state/nonce
rand = "0.8"

# Browser integration for OAuth
open = "5.0"

# Error handling (aligned with turbomcp 3.0.0-beta.1)
thiserror = "2.0"
anyhow = "1.0"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process management
sysinfo = "0.32"

# File & path utilities
dirs = "5.0"

# Concurrency
parking_lot = "0.12"
dashmap = "6.1"

# Secure storage
keyring = "2.3"
tauri-plugin-log = "2.7.0"
log = "0.4.28"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
# Unix socket support on Linux and macOS - v3 modular transports
turbomcp-transport = { path = "../../turbomcp/crates/turbomcp-transport", default-features = false, features = ["stdio", "http", "websocket", "tcp", "unix"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Exclude unix feature on Windows - v3 modular transports
turbomcp-transport = { path = "../../turbomcp/crates/turbomcp-transport", default-features = false, features = ["stdio", "http", "websocket", "tcp"] }

[features]
default = ["stdio", "http", "websocket", "tcp", "dpop"]
stdio = []
http = []
websocket = []
tcp = []
unix = []
dpop = ["dep:turbomcp-dpop"]  # Optional DPoP support (RFC 9449)
full = ["stdio", "http", "websocket", "tcp", "dpop"]  # All features for production

