[package]
name = "turbomcpstudio"
version = "0.1.1"
description = "TurboMCP Studio - Native desktop application for Model Context Protocol development"
authors = ["TurboMCP Studio Team"]
edition = "2021"

[lib]
name = "turbomcpstudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-window-state = "2.0"
tauri-plugin-single-instance = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
dashmap = "6.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros"] }
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
keyring = "3.0"
url = { version = "2.5", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = "9.3"
axum = "0.8"
sysinfo = "0.33"
regex = "1.10"
rand = "0.8" # TODO: Consider upgrading to rand 0.9
sha2 = "0.10"
open = "5.0"
dirs = "5.0"
log = "0.4"

# TurboMCP integration - v3.0.10
# default-features = false on client/proxy/transport to prevent turbomcp-unix from
# being pulled in as a transitive dependency on Windows where Unix sockets don't exist.
turbomcp-client = { version = "3.0.10", default-features = false }
turbomcp-protocol = "3.0.10"
turbomcp-types = "3.0.10"
turbomcp-auth = { version = "3.0.10", features = ["oauth2", "jwt", "token-refresh"] }
turbomcp-dpop = { version = "3.0.10", optional = true }
turbomcp-proxy = { version = "3.0.10", default-features = false, features = ["introspection", "runtime"] }
turbomcp-transport = { version = "3.0.10", default-features = false, features = ["stdio", "http", "websocket", "tcp"] }
turbomcp-stdio = "3.0.10"
turbomcp-http = "3.0.10"
turbomcp-websocket = "3.0.10"
turbomcp-tcp = "3.0.10"
turbomcp-transport-traits = "3.0.10"

# Unix socket transport — only available on Unix platforms (macOS, Linux)
[target.'cfg(unix)'.dependencies]
turbomcp-unix = "3.0.10"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["full"]
stdio = []
http = []
websocket = []
tcp = []
unix = []
dpop = ["dep:turbomcp-dpop"]
full = ["stdio", "http", "websocket", "tcp", "dpop"]
